<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBackground"
    tools:context="codes.jean.telepathy.MenuSendFile">

    <LinearLayout
        android:id="@+id/menuSF"
        android:layout_width="65dp"
        android:layout_height="498dp"
        android:layout_marginTop="25dp"
        android:background="@color/greyMenu"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <Button
            android:id="@+id/bUrlMenuSF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingTop="10dp"
            android:text="@string/bUrlMenu"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bFileMenuSF"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/bFileMenu"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tVTitleSendFile"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="16dp"
        android:text="@string/sendFileTitle"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <Button
        android:id="@+id/bChooseFile"
        android:layout_width="280dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginRight="16dp"
        android:layout_marginTop="72dp"
        android:background="@drawable/rounded_button_orange"
        android:text="@string/bChooseFile"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menuSF"
        app:layout_constraintTop_toBottomOf="@+id/tVTitleSendFile" />

    <Button
        android:id="@+id/bSendFile"
        android:layout_width="280dp"
        android:layout_height="36dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:layout_marginTop="12dp"
        android:background="@drawable/rounded_button_green"
        android:text="@string/bSendFile"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menuSF"
        app:layout_constraintTop_toBottomOf="@+id/bChooseFile" />

    <TextView
        android:id="@+id/tVFilePath"
        android:layout_width="280dp"
        android:layout_height="28dp"
        android:layout_marginBottom="12dp"
        android:layout_marginEnd="16dp"
        android:layout_marginRight="16dp"
        android:layout_marginStart="8dp"
        android:layout_marginLeft="8dp"
        android:text="@string/tVChooseFilePath"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintBottom_toTopOf="@+id/bChooseFile"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@+id/menuSF" />

</android.support.constraint.ConstraintLayout>
