<?xml version="1.0" encoding="utf-8"?>
<android.support.constraint.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/greyBackground"
    tools:context="codes.jean.telepathy.MenuOpenURL">

    <Button
        android:id="@+id/bSendURL"
        android:layout_width="222dp"
        android:layout_height="36dp"
        android:layout_marginTop="252dp"
        android:background="@drawable/rounded_button_green"
        android:text="@string/bSendURL"
        android:textColor="@color/white"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.691"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/eTURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginBottom="16dp"
        android:layout_marginEnd="8dp"
        android:layout_marginStart="8dp"
        android:backgroundTint="@color/white"
        android:ems="10"
        android:hint="@string/URL_Input"
        android:inputType="textUri"
        android:textColor="@color/white"
        android:textColorHint="@color/greyMenu"
        app:layout_constraintBottom_toTopOf="@+id/bSendURL"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.679"
        app:layout_constraintStart_toStartOf="parent" />

    <LinearLayout
        android:id="@+id/menu"
        android:layout_width="65dp"
        android:layout_height="498dp"
        android:layout_marginTop="25dp"
        android:background="@color/greyMenu"
        android:orientation="vertical"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="parent">

        <Button
            android:id="@+id/bUrlMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:paddingTop="10dp"
            android:text="@string/bUrlMenu"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

        <Button
            android:id="@+id/bFileMenu"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:background="@android:color/transparent"
            android:text="@string/bFileMenu"
            android:textColor="@android:color/background_light"
            android:textSize="24sp" />

    </LinearLayout>

    <TextView
        android:id="@+id/tVTitleSendURL"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginStart="76dp"
        android:layout_marginLeft="76dp"
        android:layout_marginTop="24dp"
        android:text="@string/sendURLTitle"
        android:textColor="@color/white"
        android:textSize="26sp"
        android:textStyle="bold"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

</android.support.constraint.ConstraintLayout>
